# ffmpeg-decoder-rs

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
decoder/: Cargo.toml
decoder/src/: decoder.rs  lib.rs  rodio.rs
libav-sys/: .gitignore  Cargo.toml  build.rs
libav-sys/data/: libavutil.h  libswresample.h
libav-sys/src/: lib.rs
src/: decoder.rs  error.rs  lib.rs  main.rs
