[package]
name = "ffmpeg-decoder"
version = "0.1.0"
authors = ["tarkah <admin@tarkah.dev>"]
edition = "2018"
license = "MIT"
description = "Decodes audio files using ffmpeg with rust. Can be used as a rodio source."
documentation = "https://docs.rs/ffmpeg-decoder"
repository = "https://github.com/tarkah/ffmpeg-decoder-rs"
readme = "README.md"


[lib]
name = "ffmpeg_decoder"
path = "src/lib.rs"

[features]
default = []
rodio_source = ['rodio']

[dependencies]
ffmpeg4-sys = { version = "4.3.0-pre.1", default-features=false, features=['avcodec','avformat','swresample'] }

thiserror = "1.0"
log = "0.4"

rodio = { version = "0.11", default-features=false, optional=true }

[workspace]
members = [
    ".",
    "cli"
]
default-members = [
    "cli",
]