[package]
name = "libav-sys"
version = "0.1.0"
authors = ["tarkah <admin@tarkah.dev>"]
edition = "2018"

build = "build.rs"

[build-dependencies]
bindgen = "0.53"
metadeps = "1.1"
cfg-if = "0.1"

[package.metadata.pkg-config]
libavcodec = "58"
libavformat = "58"
libavutil = "56"
libswresample = "3.5.100"

[dependencies]